--- a/cmake/melondsds-LICENSE.txt.in
+++ b/cmake/melondsds-LICENSE.txt.in
@@ -272,6 +272,10 @@ ${TEAKRA_LICENSE}
 
 ${TINY_AES_LICENSE}
 
+# toml11: TOML for Modern C++ ##########################################################################################
+
+${TOML11_LICENSE}
+
 # xxhash ###############################################################################################################
 
 xxHash - Extremely Fast Hash algorithm
