Add a default `screens.toml` layout file
- Embed it in the build, too

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -160,6 +160,11 @@ embed_binaries(libretro-assets
     ASSET
         NAME "melondsds_error_body_font"
         PATH "assets/OpenSans_Condensed-SemiBold.ttf"
+    ASSERT
+        NAME "melondsds_screens_config"
+        PATH "assets/screens.toml"
+        BYTE_TYPE char
+        NULL_TERMINATE
 )
 
 add_common_definitions(melondsds_libretro)
