Move `layout.cpp` and `hpp` to the `screen` directory

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -28,8 +28,6 @@ add_library(melondsds_libretro ${LIBRARY_TYPE}
     config/definitions/screen.hpp
     config/definitions/system.hpp
     config/definitions/video.hpp
-    config/layout.cpp
-    config/layout.hpp
     config/parse.cpp
     config/parse.hpp
     config/types.hpp
@@ -107,6 +105,8 @@ add_library(melondsds_libretro ${LIBRARY_TYPE}
     retro/threads.hpp
     screenlayout.cpp
     screenlayout.hpp
+    screen/layout.cpp
+    screen/layout.hpp
     std/chrono.hpp
     std/semaphore.hpp
     std/span.hpp
