--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,10 +112,8 @@ android-arm64-v8a:
     - .core-defs
   before_script:
     - export NUMPROC=$(($(nproc)/5))
-#    - echo "deb http://deb.debian.org/debian stable-backports main" >> /etc/apt/sources.list
-    - apt-get update -qy
-    - apt-get upgrade -qy cmake
-#    - apt-get install -qy cmake/stable-backports
+    - /android-sdk-linux/cmdline-tools/latest/bin/sdkmanager "cmake;3.30.3"
+    - export PATH=/android-sdk-linux/cmake/3.30.3/bin:$PATH
   variables:
     CORE_ARGS: -Wno-deprecated
     CXXFLAGS: -Wno-deprecated-declarations -Wno-unknown-attributes
@@ -129,10 +127,8 @@ android-x86_64:
     - .core-defs
   before_script:
     - export NUMPROC=$(($(nproc)/5))
-#    - echo "deb http://deb.debian.org/debian stable-backports main" >> /etc/apt/sources.list
-    - apt-get update -qy
-    - apt-get upgrade -qy cmake
-#    - apt-get install -qy cmake/stable-backports
+    - /android-sdk-linux/cmdline-tools/latest/bin/sdkmanager "cmake;3.30.3"
+    - export PATH=/android-sdk-linux/cmake/3.30.3/bin:$PATH
   variables:
     CORE_ARGS: -Wno-deprecated
     CXXFLAGS: -Wno-deprecated-declarations -Wno-unknown-attributes
