Set CMAKE_POLICY_VERSION_MINIMUM to 3.5
- To work around a policy issue involving `yamc`
- I'll need to fix this properly later

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -203,6 +203,7 @@ jobs:
             -Wno-deprecated \
             -DCMAKE_BUILD_TYPE="${{ inputs.cmake-config }}" \
             -DTRACY_ENABLE="${{ env.TRACY_ENABLE }}" \
+            -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
             ${{ inputs.cmake-args }}
 
       - name: Configure (With Test Suite)
@@ -226,6 +227,7 @@ jobs:
             -DGBA_ROM="${{ env.TESTFILE_DIR }}/${{ secrets.GBA_ROM }}" \
             -DGBA_SRAM="${{ env.TESTFILE_DIR }}/${{ secrets.GBA_SRAM }}" \
             -DMELONDSDS_INTERNAL_VENV=OFF \
+            -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
             ${{ inputs.cmake-args }}
 
       - name: Build
