Fix GL on Apple platforms
Renamed shader attributes from pos/texcoord to vPosition/vTexcoord to match the C++ glBindAttribLocation calls. The mismatch meant the bind calls had no effect, and the driver assigned locations arbitrarily. This works by luck on Linux/Windows but fails on macOS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ else()
 endif ()
 option(ENABLE_JIT "Enable JIT support. Not supported on all platforms." ${DEFAULT_ENABLE_JIT})
 
-if (ANDROID OR IOS OR APPLE)
+if (ANDROID)
     message(STATUS "OpenGL is disabled by default on this platform.")
     set(DEFAULT_ENABLE_OPENGL OFF)
 else ()
