--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -116,8 +116,7 @@ jobs:
       test-suite: true
       testfiles-cache-key: ${{ needs.fetch-testfiles.outputs.testfiles-cache-key }}
       cmake-config: "${{ matrix.config }}"
-      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="x86_64" -DENABLE_OGLRENDERER=OFF -DCMAKE_APPLE_SILICON_PROCESSOR="x86_64"
-      # Disabled OpenGL on macOS due to https://github.com/JesseTG/melonds-ds/issues/12
+      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="x86_64" -DCMAKE_APPLE_SILICON_PROCESSOR="x86_64"
     secrets:
       TESTFILE_REPO_TOKEN: ${{ secrets.TESTFILE_REPO_TOKEN }}
       TESTFILE_REPO: ${{ secrets.TESTFILE_REPO }}
@@ -147,8 +146,7 @@ jobs:
       test-suite: true
       testfiles-cache-key: ${{ needs.fetch-testfiles.outputs.testfiles-cache-key }}
       cmake-config: "${{ matrix.config }}"
-      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="arm64" -DENABLE_OGLRENDERER=OFF -DCMAKE_APPLE_SILICON_PROCESSOR="arm64"
-      # Disabled OpenGL on macOS due to https://github.com/JesseTG/melonds-ds/issues/12
+      cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="arm64" -DCMAKE_APPLE_SILICON_PROCESSOR="arm64"
     secrets:
       TESTFILE_REPO_TOKEN: ${{ secrets.TESTFILE_REPO_TOKEN }}
       TESTFILE_REPO: ${{ secrets.TESTFILE_REPO }}
