--- a/.github/workflows/clear-cache.yaml
+++ b/.github/workflows/clear-cache.yaml
@@ -6,7 +6,7 @@ permissions:
 jobs:
   clear-cache:
     name: Clear Cache
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-slim
 
     steps:
       - name: Clear caches
