Run the OpenGL tests on macOS

--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,6 +1,3 @@
-# melonDS DS doesn't support OpenGL on macOS,
-# so there's no need to install OpenGL dependencies
-libretro.py==0.6.0
-libretro.py[opengl]==0.6.0 ; sys_platform != "darwin"
+libretro.py[opengl]==0.6.0
 Pillow==12.1.1
 more-itertools==10.2.* ; python_version < '3.12'
